# napari-fewshot-segementer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_fewshot_segementer/: napari.yaml
src/napari_fewshot_segementer/_tests/: test_reader.py  test_widget.py  test_writer.py
